--- a/solution.ipynb
+++ b/solution.ipynb
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "id": "d70ea5c0",
    "metadata": {},
    "outputs": [
@@ -1012,6 +1012,7 @@
     "\n",
     "ax[0,0].set_xlabel(\"Default Rate (%)\") \n",
     "\n",
+    "\n",
     "# Default rate by employment status\n",
     "sns.barplot(default_rate_by_employment_status, x=\"Employment Status\", y=\"Default Rate\", palette=\"viridis\", ax=ax[0,1])\n",
     "\n",
@@ -1019,12 +1020,14 @@
     "\n",
     "ax[0,1].set_ylabel(\"Default Rate (%)\") \n",
     "\n",
+    "\n",
     "# Default rate by region \n",
     "sns.barplot(default_rate_by_region, x=\"Default Rate\", y=\"Region\", palette=\"viridis\", ax=ax[1,0])\n",
     "\n",
     "ax[1,0].set_title(\"Default Rate by Region\")\n",
     "\n",
     "ax[1,0].set_xlabel(\"Default Rate (%)\")\n",
+    "\n",
     "\n",
     "# Default rate by age group \n",
     "sns.barplot(default_rate_by_age_group, x=\"Default Rate\", y=\"Age Group\", palette=\"viridis\", ax=ax[1,1])\n",
@@ -1034,12 +1037,14 @@
     "ax[1,1].set_xlabel(\"Default Rate (%)\")\n",
     "\n",
     "\n",
+    "\n",
     "# Default rate by income band \n",
     "sns.barplot(loan_default_by_income_band, x=\"Default Rate\", y=\"Income Band\", palette=\"viridis\", ax=ax[2,0])\n",
     "\n",
     "ax[2,0].set_title(\"Default Rate by Income Band\")   \n",
     "\n",
     "ax[2,0].set_xlabel(\"Default Rate (%)\")\n",
+    "\n",
     "\n",
     "\n",
     "# Default rate by gender \n",
@@ -1051,11 +1056,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "28fce969",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Data Story | Key Findings\n",
+    "\n",
+    "##### **Education Level**\n",
+    "- PhD's and masters holders have the highest default rate (approaching 40%)\n",
+    "\n",
+    "- This insight is counterintuitive. It suggest that education level is not a major factor to protect against loan default or to be considered during risk assessment. This phenomenon may be explained as follows;\n",
+    "  1. **Over-Leveraging** - This occurrs when Ph.D's and Masters holders (or individuals with higher levels of education) take more debt than they can can reasonably pay. This may be caused by the fact that they have higher abilities hence qualify for larger loans, they expect high incomes because they have higher academic qualifications, and they may have other obligations such as education loans. Even though they are highly educated, they may have challenges making monthly loan repayments especially when the debt obligation is higher than the cashflow/income.\n",
+    "\n",
+    "  2. **Mismatch Between Qualifications and Income Generation** - This means that, while someone may have a higher academic qualification, they may not be earning as much as expected. This me be as a result of;\n",
+    "        - **Underemployment**, that is, working a job that doesn't match skills or pay expectations. \n",
+    "        - **Economic Constraints** which may result to delayed promotions or market saturation resulting to low demand.\n",
+    "\n",
+    "\n",
+    "##### **Employment Status**\n",
+    "- Unemployed borrowers have the highest default rate (approaching 40%). This rate is significantly higher compared to employed borrowers (approx 27%) and self-employed borrowers (approx 25%).\n",
+    "\n",
+    "- This insight suggest that employment status is a major factor during risk assessment. For the loan products that target unemployed people, such offerings should be reconsidered or re-evaluated. \n",
+    "\n",
+    "\n",
+    "##### **Region** \n",
+    "\n",
+    "- Borrowers from Nairobi Region have the highest default rate, followed closely by Mombasa with default rates approaching 40%. \n",
+    "\n",
+    "- This suggest that cities tend to have higher default rates. This may be as a result of high cost of living that may force people to borrow more (increase thier borrowing) compared to \"Other\" regions which may be considered to be outside cities. \n",
+    "\n",
+    "- It is important to consider Region during risk assessment and focus should be given to diversification of regions into \"Other\" regions to diversify the credit portfolion and reduce exposure. \n",
+    "\n",
+    "\n",
+    "##### Age Group \n",
+    "\n",
+    "- Young burrowers aged 18-34 years have higher default rates peaking at 39%. This may be attributed by the fact that this segment of borrowers is in thier early stages of thier career or entreprenuership journey. Therefore, they may lack stable and well-established financial management and planning skills. This segment comproses of university students, young profesisonals, or freelancers in the gig-economy. There income levels may be unreliable, sporadic, or low which may make it hard to meet montly installments in some cases. Therefore, they tend to be more financially vulnerable which may call for interventions like financial education, tight credit scoring, and strick financial verification.\n",
+    "\n",
+    "- Older customers aged 45-54 years demonstrates lower default rates notably because they have more stable financial management and planning skills, they have established careers or business, or have conservative borrowing behavior. This segment already owns property like homes, land, and cars which may serve as collaterals for the loans reducing the percieved risk of default. As a result, their default rate is moderate-to-low. The bank should therefore focus on retaining this age group, cross-sell other products (e.g., mortgages, investment products), and up-sell higher ticket loans.\n",
+    "\n",
+    "- Therefore, age is a critical factor during risk assessment. \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f269d1ff",
+   "metadata": {},
    "source": []
   }
  ],
