--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2402,6 +2402,53 @@
    "id": "f26c1664",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9954b087",
+   "metadata": {},
+   "source": [
+    "##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65a7f1df",
+   "metadata": {},
+   "source": [
+    "#### **6. Can we build a predictinve model to identify high-risk loan applicants before disbursements? - Using key variables like Credit Score, Income, and Loan Amount?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0ca97da",
+   "metadata": {},
+   "source": [
+    "**YES** - Based on the analysis, we can build a predictive model to identify high-risk loan applicants before disbursements. Important risk indicators include;\n",
+    "\n",
+    " - `Credit Score` - Negative relationship is clear. Low scores == higher credit risk\n",
+    "\n",
+    " - `Debt-to-Income Ratio` - Higher DTI suggests a likelihood of loan default.\n",
+    "\n",
+    " - `Previous Defaults` - Default rates is significantly higher for customers with prior defaults.\n",
+    "\n",
+    " - `Existing Loan Count` - Higher existing loan counts correlates with higher default rates\n",
+    "\n",
+    " - `Income` \n",
+    "\n",
+    " - `Loan Amount` \n",
+    "\n",
+    " - Optional == `Loan Purpose, Age, Tenure, etc.` (Have minimal predictive power) \n",
+    "\n",
+    "Target Variable == `Default_Status` (Defaulted = 0, Not Defaulted = 1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "802aa158",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
